<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/ll_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_wifi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/wifi_name"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/et_wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/input_wifi_name"
            android:inputType="text"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wifi_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_wifi_name">

        <TextView
            android:id="@+id/tv_wifi_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/wifi_password"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/et_wifi_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/input_wifi_password"
            android:inputType="text"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
